# bevy-snake-with-claude-mcp

./: Cargo.toml  justfile
src/: main.rs
src/snake/: components.rs  mod.rs  resources.rs  systems.rs
src/ui/: components.rs  mod.rs  systems.rs
