[package]
authors = ["Derrick Weis <derrick@derrickweis.com>"]
edition = "2021"
name = "snake"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
bevy = "0.15.0"
rand = "0.8.5"
